feat(editor): 添加 ID 代码生成器工具
- 新增 ConfigIdCodeGenerator 类，用于生成配置 ID 常量
- 添加 IDefinition 接口的 CodeName属性
- 更新 ResourceDefinition 类，添加 CodeName 属性
- 修改 ResourcesSection 资源定义，使用 codeName 替代 resourceName- 创建 ID 代码生成器使用说明文档

--- a/Assets/Scripts/Game/Data/数据驱动配置系统.md
+++ b/Assets/Scripts/Game/Data/数据驱动配置系统.md
@@ -1,8 +1,16 @@
 ﻿# 数据驱动配置系统 使用说明 (GameRuntimeData + DefinitionSectionBase)
 
-版本: 1.0  
+版本: 1.1  
 最后更新: 2025-09-03  
-作者: 郑钦
+作者: 郑钦（更新整理含资源系统建模建议）
+
+相较 1.0 更新摘要：
+- 新增：资源物品 vs 采集节点（Gatherable Node）分离的建模指南
+- 新增：运行时状态与存档区分章节
+- 新增：跨 Section 引用与校验建议示例
+- 新增：采集/掉落/生成相关扩展方向
+- 补充 FAQ：为什么不要在 Definition 中保存运行时动态值
+- 示例代码扩展为“物品定义 + 采集节点定义”组合
 
 ---
 
@@ -21,6 +29,12 @@
 12. 设计 FAQ
 13. 典型使用示例代码
 14. 未来可扩展方向
+15. 资源与采集节点建模指南（重要新增）
+16. 运行时状态 / 存档 与 Definition 的关系
+17. 跨 Section 引用与校验策略
+18. ID 管理与防冲突策略
+19. 变更记录（Changelog）
+    附录：快速 Checklist
 
 ---
 
@@ -30,12 +44,12 @@
 
 | 需求 | 解决方式 |
 | ---- | -------- |
-| 避免 GameContext 硬编码 Items/Recipes 等字段 | 使用 GameRuntimeData 动态注册表 + Type/SectionName/DefinitionType 3 重索引 |
-| 快速新增任意配置集合（Section） | 继承 DefinitionSectionBase<TDef> 并实现 Definition（ID） |
+| 避免 GameContext 硬编码 Items/Recipes 等字段 | 使用 GameRuntimeData 动态注册表 + Type/SectionName/DefinitionType 三重索引 |
+| 快速新增任意配置集合（Section） | 继承 DefinitionSectionBase<TDef> 并实现 IDefinition |
 | 统一访问方式 | GameContext.Instance.GetDefinition<TDef>(id) |
-| 编辑器集中管理与批量操作 | 使用 [CustomConfig] + ConfigDatabaseWindow |
-| 安全检验/调试 | SectionValidationUtility 与日志输出 |
-| 后期扩展（排序、代码生成、跨 Section 依赖校验） | 已预留结构 |
+| 编辑器集中管理与批量操作 | [CustomConfig] + ConfigDatabaseWindow |
+| 安全检验/调试 | SectionValidationUtility + 日志 |
+| 可扩展（跨 Section 校验 / 自定义 Registry / 地址化加载） | 结构已预留 |
 
 ---
 
@@ -43,15 +57,17 @@
 
 | 名称 | 含义 |
 | ---- | ---- |
-| IDefinition | 需要有唯一 int Id 的最小定义条目接口 |
-| DefinitionRegistry<TDef> | 泛型注册表：Id → 定义对象（可继承扩展） |
-| DefinitionSectionBase<TDef> | 泛型 Section 基类：持有 List<TDef>，Build 时创建 Registry 并注册 |
-| IContextSection | GameContext 可识别、会在初始化中 Build 的 Section 接口 |
-| GameRuntimeData | 统一容器：Type → Instance / SectionName → Instance / DefinitionType → IDefinitionRegistry |
-| RuntimeConfigLoader | 反射扫描 + 资产加载 |
-| GameContext | 由 SingletonManager 驱动，负责一次性构建所有 Section |
-| [CustomConfig] | 仅用于编辑器 ConfigDatabaseWindow 的“显示过滤”标记 |
-| ConfigDatabaseWindow | 统一管理 ScriptableObject 的编辑器工具（已在项目中） |
+| IDefinition | 具有唯一 int Id 的定义条目接口 |
+| DefinitionRegistry<TDef> | Id → 定义实例的字典封装，可继承扩展查询 |
+| DefinitionSectionBase<TDef> | 泛型 Section 基类：持有 List<TDef>，Build 时生成 Registry |
+| IContextSection | GameContext 扫描 & 构建的 Section 单元 |
+| GameRuntimeData | 存放所有注册对象：Type / SectionName / DefinitionType 三索引 |
+| RuntimeConfigLoader | 反射扫描 Section 类型 + 加载资产 |
+| GameContext | 框架入口：集中构建所有 Section |
+| [CustomConfig] | 编辑器标记（供 ConfigDatabaseWindow 过滤显示） |
+| Registry 扩展 | 可自定义派生类添加索引 / 条件查询 |
+| SectionName | 逻辑命名空间（非类型名）允许手动覆盖 |
+| DefinitionType | 一个 Registry 服务的定义类型（TDef） |
 
 ---
 
@@ -71,9 +87,11 @@ Scripts/
     RuntimeConfigLoader.cs
     SectionValidationUtility.cs (Editor)
   Data/Items/
-    ItemsSection.cs (示例)
+    ItemsSection.cs
+  Data/Gatherables/
+    GatherableNodesSection.cs (示例扩展)
   Data/Recipes/
-    RecipesSection.cs (示例)
+    RecipesSection.cs
   ...
   Core/
     GameContext.cs
@@ -86,7 +104,7 @@ Scripts/
 ```
 +---------------------------+
 | SingletonManager          |
-|  (Initialize Pipeline)    |
+| (Initialize Pipeline)     |
 +-------------+-------------+
               |
               v
@@ -95,88 +113,49 @@ Scripts/
               v
    RuntimeConfigLoader.GetSectionTypes()
               |
-      反射所有实现 IContextSection
+     反射所有实现 IContextSection
               |
               v
-   每种 SectionType -> 查找所有资产实例
+   每个 SectionType → 枚举其所有资产
               |
               v
-      逐个调用 s.Build(GameRuntimeData)
+         s.Build(data)
               |
               v
-  GameRuntimeData.RegisterSection(sectionName, registry)
-    ├─ 保存 SectionName → 实例
-    ├─ 保存 实例类型(Type) → 实例
-    └─ 若是 IDefinitionRegistry → 保存 DefinitionType → Registry
+  GameRuntimeData.RegisterSection()
+   ├─ SectionName → 实例
+   ├─ InstanceType → 实例
+   └─ DefinitionType → Registry (若实现 IDefinitionRegistry)
               |
               v
-        （可选）Data.LogSummary()
-              |
-              v
-        对外提供访问 API
-```
-
-ASCII 总览图：
-
-```
-[ScriptableObject Assets]
-   | ItemsSection.asset
-   | RecipesSection.asset
-   | MachinesSection.asset
-            |
-            v (Build)
-+-----------------------------+
-|        GameRuntimeData      |
-|  - _typeMap (Type→Inst)     |
-|  - _sectionMap (string→Inst)|
-|  - _definitionRegs (T→Reg)  |
-+-----------------------------+
-            ^
-            |
-      GameContext
+        日志 & 可选校验
 ```
 
 ---
 
 ## 5. 如何新增一个配置 Section
 
-步骤：
-1. 创建定义类型：
-   ```csharp
-   [System.Serializable]
-   public class EnemyDefinition : IDefinition {
-       [SerializeField] private int id;
-       public int Id => id;
-       public string displayName;
-       public int hp;
-       public int attack;
-   }
-   ```
-2. 创建 Section 资产脚本：
-   ```csharp
-   [CustomConfig] // 让编辑器窗口识别（可选）
-   [CreateAssetMenu(menuName="Game/Config/Enemies Section")]
-   public class EnemiesSection : DefinitionSectionBase<EnemyDefinition>
-   {
-       public override string SectionName => "Enemies"; // 可自定义
-       // 如需自定义 Registry，可 override CreateRegistry()
-   }
-   ```
-3. 在项目中右键创建 Enemies Section 资产（建议放 Resources/Config/ 或任意目录）。
-4. 在资产 Inspector 中填充 definitions 列表。
-5. 运行游戏：控制台输出构建日志（若启用 verbose）。
+1. 定义数据结构（实现 IDefinition）
+2. 新建 Section 派生自 DefinitionSectionBase<TDef>
+3. （可选）自定义 Registry：添加额外检索/索引
+4. 创建资产、填充 definitions 列表
+5. 运行游戏，验证加载日志
 
-可选：自定义 Registry
+示例（精简）：
 ```csharp
-public class EnemyRegistry : DefinitionRegistry<EnemyDefinition> {
-    public EnemyRegistry(IEnumerable<EnemyDefinition> defs) : base(defs) {}
-    public IEnumerable<EnemyDefinition> EnumerateByHP(int min) {
-        foreach (var d in Map.Values) if (d.hp >= min) yield return d;
-    }
+[System.Serializable]
+public class EnemyDefinition : IDefinition {
+    [SerializeField] private int id;
+    public int Id => id;
+    public string displayName;
+    public int hp;
+    public int attack;
 }
+
+[CustomConfig]
+[CreateAssetMenu(menuName="Game/Config/Enemies Section")]
 public class EnemiesSection : DefinitionSectionBase<EnemyDefinition> {
-    protected override IDefinitionRegistry CreateRegistry()
-        => new EnemyRegistry(definitions);
+    public override string SectionName => "Enemies";
 }
 ```
 
@@ -184,201 +163,180 @@ public class EnemiesSection : DefinitionSectionBase<EnemyDefinition> {
 
 ## 6. 如何访问配置与定义
 
-通用 API（在任何运行时脚本中）：
-
 ```csharp
-// 访问定义
-var wood = GameContext.Instance.GetDefinition<ItemDefinition>(1);
+// 直接取定义（未找到抛异常）
+var sword = GameContext.Instance.GetDefinition<ItemDefinition>(1001);
 
 // 安全尝试
-if (GameContext.Instance.TryGetDefinition<RecipeDefinition>(102, out var recipe)) {
-    // 使用 recipe
+if (GameContext.Instance.TryGetDefinition<RecipeDefinition>(3005, out var recipe)) {
+    // ...
 }
 
-// 获取注册表实例（已知具体类型）
-var itemRegistry = GameContext.Instance.GetRegistry<ItemRegistry>();
-var plank = itemRegistry.Get(3);
+// 获取自定义 Registry
+var itemReg = GameContext.Instance.GetRegistry<ItemRegistry>();
+var plank = itemReg.Get(1002);
 
-// 按 Section Name 获取（如果你需要）
-var enemiesSectionObj = GameContext.Instance.Data.GetBySection("Enemies");
-// 根据实际类型再转换
+// 遍历所有 Section
+foreach (var (name, inst) in GameContext.Instance.Data.EnumerateSections()) {
+    Debug.Log($"Section={name}, Type={inst.GetType().Name}");
+}
 ```
-
-错误时抛出的异常：
-- GetDefinition<T>(id) 未找到会抛 KeyNotFoundException
-- GetRegistry<T>() 未找到类型会抛 InvalidOperationException  
-  建议在调试阶段使用 Get*，正式流程中对可选资源使用 Try*。
 
 ---
 
 ## 7. 编辑器工作流
 
-1. 任何想在 ConfigDatabaseWindow 中集中管理的 ScriptableObject，加上 `[CustomConfig]`。
-2. 使用菜单（假设已有）：Tools/Config DB/Config Database 打开窗口。
-3. 在左侧类型列表选中 Section 类型，右侧可以：
-    - 创建新资产
-    - 批量操作（复制 / 删除 / 移动 / 导出 JSON / 重命名）
-4. Section 的 definitions 列表即实际数据内容（List<TDef>）。
-5. 你可建立多个同类型 Section 资产（多个 ItemsSection），都会被加载并 Build（如果你逻辑允许这样叠加，需要你在自定义 Registry 内决定是否合并/覆盖）。
-
-建议：**一个资源类型一个 Section**，避免多个 Section 合并时出现重复 Id 难界定。
+1. 想在配置窗口出现 → 加 [CustomConfig]
+2. Section 资产可多个（是否允许合并由你决定）
+3. definitions 列表：直接拖/增/删
+4. 运行前可执行 Validate 菜单快速发现结构错误
+5. 建议：一个概念域一个 Section，避免重复 Id 管理困难
 
 ---
 
 ## 8. 运行时 / 构建注意事项
 
-| 情况 | 说明 |
-| ---- | ---- |
-| Editor 模式 | 使用 AssetDatabase.FindAssets 精确定位所有 Section 资产 |
-| Player（构建） | 当前实现：Resources.LoadAll("Config", sectionType)；若资产不在 Resources/Config/ 下将无法加载 |
-| 多个 Section 同类型 | Build 顺序未定义（取决于 FindAssets / LoadAll 返回）；若有 Id 冲突会在各 Registry 内打印错误 |
-| 反射开销 | 初始化时一次性扫描 Assemblies，可通过 GameContextConfig.forceRescanOnPlay 控制是否重复扫描 |
-| 代码剥离 | 若使用 IL2CPP 且启用代码裁剪，务必保证 Section 具体类型引用不被裁剪（目前由于继承与实例引用，正常情况下安全） |
+| 项 | 说明 |
+|----|-----|
+| Editor 加载 | AssetDatabase.FindAssets 精确加载 |
+| Player 加载 | Resources.LoadAll("Config", sectionType)（需放 Resources/Config） |
+| 顺序不保证 | 多资产同类型之间无顺序保证 |
+| 反射扫描缓存 | forceRescanOnPlay=false 时只第一次扫描 |
+| IL2CPP 剪裁 | 继承关系 + 资产引用已防裁剪，复杂动态场景可加 link.xml |
+| 多个相同 Section | 若造成 Id 冲突，仅打印错误，不中断构建（可自定义改为抛异常） |
 
 ---
 
 ## 9. 校验与调试
 
-1. 运行菜单：Tools/Config DB/Validate All Sections
-    - 将对每个 Section 资产调用一次 Build() 到临时 GameRuntimeData，捕获异常。
-2. 在 GameContextConfig 勾选 verbose = true
-    - 打印：发现 Section 类型数 / 每类资产数量 / 构建耗时。
-3. 调用 Data.LogSummary()（默认启用）
-    - 输出注册表与 Section 计数。
-4. 自行扩展：
-    - 添加 Cross Section Validator（例如校验 RecipeDefinition 引用的 itemId 是否存在）。
-
-示例（跨 Section 校验，可后续添加）：
-```csharp
-public static class CrossSectionValidator {
-    public static void Validate(GameRuntimeData data) {
-        if (!data.TryGetDefinition<ItemDefinition>(1, out _)) { /* ... */ }
-    }
-}
-```
-
-在 GameContext.BuildAll() 末尾调用：
-```csharp
-CrossSectionValidator.Validate(Data);
-```
+| 工具 | 作用 |
+| ---- | ---- |
+| Validate All Sections 菜单 | 尝试构建每个 Section，捕获异常 |
+| verbose 日志 | 输出类型数量 / 资产数量 / 耗时 |
+| Data.LogSummary() | 输出当前注册计数 |
+| 自定义 Cross Validator | 进行跨表引用一致性校验 |
 
 ---
 
 ## 10. 常见错误与诊断
 
-| 现象 | 原因 | 解决 |
+| 现象 | 原因 | 处理 |
 | ---- | ---- | ---- |
-| GetDefinition 抛异常 | Id 不存在或 Section 未加载 | 检查资产是否在正确目录；是否正确填 Id；用 TryGetDefinition 预防 |
-| Section 没有被构建 | 没有实现 IContextSection | 确认继承 DefinitionSectionBase 或手写实现接口 |
-| 运行时不加载某 Section | 构建环境（Player）时未放入 Resources/Config | 移动资产或改加载逻辑为 Addressables |
-| 重复 Id 报错 | 定义列表内有重复 Id | 在编辑器窗口内过滤/排序检查，或写校验工具 |
-| 构建后访问为 null | 初始化顺序不对 / GameContext 未放入 SingletonManagerConfig | 确认 SingletonManager 初始化完成后再访问 |
-| 需要热更 | 当前使用 ScriptableObject + Resources，需要自定义加载管线 | 封装 ISectionAssetProvider 替换 Resources 查找 |
+| GetDefinition 抛异常 | Id 不存在 | 确认资产 & Id，必要时改用 TryGetDefinition |
+| Section 未加载 | 未实现 IContextSection 或未放指定目录 | 确认继承/目录 |
+| 重复 Id 日志 | 两个资产包含相同 Id | 在编辑器中整理；考虑写 Id 分配工具 |
+| 运行时访问 Null | 初始化顺序错误 | 确认在 GameContext.Init 后执行 |
+| 想修改 Definition 值 | 不应在运行时直接改模板 | 拷贝到运行时状态对象 |
+| 想做热更 | 需替换加载层（Addressables / 外部 JSON） | 封装 Provider |
 
 ---
 
 ## 11. 性能与扩展建议
 
-| 场景 | 优化策略 |
-| ---- | -------- |
-| Section 数量大 | 代码生成静态 SectionType 列表，跳过反射 |
-| 运行时频繁访问定义 | 保持 registry.Get(id) O(1)；若需分类查询，建二级缓存 |
-| 需要卸载/重载 | 给 GameRuntimeData 增加 Clear() + 重新 Build；小心引用悬挂 |
-| Addressables | 替换 RuntimeConfigLoader 的加载阶段，用标签“ConfigSection”批量加载 |
-| 大数据（10000+ 定义） | 考虑二进制数据文件 + 自行反序列化到 struct 或 Blob，保留轻量对象层用于编辑 |
+| 场景 | 建议 |
+| ---- | ---- |
+| 定义数量 < 1k | 现实现足够 |
+| 1k~10k | 避免重复字符串解析，必要时改用 struct + Blob |
+| >10k | 外部二进制表 + 轻量缓存层 |
+| 频繁按条件查询 | 在自定义 Registry 里建索引（如 Tag → List<int>） |
+| 动态卸载 | 增加 Unregister/Clear API（当前未实现） |
+| 分区域加载 | Addressables 标签化 Section；按需加载后手动 Build |
 
 ---
 
 ## 12. 设计 FAQ
 
-Q: 为什么不用单个“大总表”ScriptableObject？  
-A: 拆 Section 便于模块隔离 / 分工 / Addressables 分片加载 / 编辑器分类管理。
+Q: Definition 可以相互直接引用对象吗？  
+A: 可以，但建议优先使用 Id 式引用，便于导表/热更与解耦。
 
-Q: 可以让配方直接引用 ItemDefinition 对象而不是 Id 吗？  
-A: 可以，但会增加交叉引用 / 序列化依赖链，不利于外部导表与热更。Id 更适合“数据导入→运行时关联”。
+Q: 为什么不要在 Definition 里放“当前剩余次数”？  
+A: Definition 是模板（静态），运行时状态应放实例对象；否则多个实体共享同一值产生逻辑污染。
 
-Q: 我想控制 Section Build 顺序怎么办？  
-A: 新增接口：
-```csharp
-public interface IOrderedSection { int Order { get; } }
-```
-扫描后：
-```csharp
-sectionTypes = sectionTypes.OrderBy(t => (t.GetInterface(nameof(IOrderedSection))!=null ? ((IOrderedSection)asset).Order : 0));
-```
-或在 Build 前构建元信息列表。
+Q: 我需要控制 Section 构建顺序怎么办？  
+A: 引入 IOrderedSection 接口或创建 SectionMeta 列表排序。
 
-Q: 多个 ItemsSection 合并想报错阻断？  
-A: 在 DefinitionSectionBase.Build 前检测 Data 是否已经有同类型 DefinitionType 注册，若不允许则抛异常。
+Q: 想阻止多个同类 Section 共存？  
+A: 在 Build 时检测 Data.EnumerateSections() 是否已有同名/同类型并抛异常。
+
+Q: 可以把 JSON 动态加载合并进来吗？  
+A: 写一个 JsonSection<TDef>：运行时读取外部文件 → 构建 registry → RegisterSection。
 
 ---
 
 ## 13. 典型使用示例代码
 
-### 13.1 获取配方并消费材料
+### 13.1 配方消耗
 ```csharp
-using Game.Core;
-using Game.Data.Recipes;
-using Game.Data.Items;
-
-public class CraftExample
+public bool TryCraft(int recipeId, PlayerInventory inv)
 {
-    public bool TryCraft(int recipeId, PlayerInventory inv)
-    {
-        if (!GameContext.Instance.TryGetDefinition<RecipeDefinition>(recipeId, out var recipe))
+    if (!GameContext.Instance.TryGetDefinition<RecipeDefinition>(recipeId, out var recipe))
+        return false;
+
+    foreach (var input in recipe.inputs)
+        if (!inv.HasItem(input.itemId, input.count))
             return false;
 
-        // 校验材料
-        foreach (var input in recipe.inputs)
-        {
-            if (!inv.HasItem(input.itemId, input.count))
-                return false;
+    foreach (var input in recipe.inputs)
+        inv.RemoveItem(input.itemId, input.count);
+
+    foreach (var output in recipe.outputs)
+        inv.AddItem(output.itemId, output.count);
+
+    return true;
+}
+```
+
+### 13.2 遍历所有物品
+```csharp
+var reg = GameContext.Instance.GetRegistry<ItemRegistry>();
+foreach (var kv in reg.Map)
+    Debug.Log($"{kv.Key} -> {kv.Value.displayName}");
+```
+
+### 13.3 枚举全部 Section
+```csharp
+foreach (var (name, inst) in GameContext.Instance.Data.EnumerateSections())
+    Debug.Log($"Section={name},Type={inst.GetType().Name}");
+```
+
+### 13.4 采集节点运行时
+```csharp
+public class GatherableNodeRuntime : MonoBehaviour {
+    public int nodeDefId;
+    private int remaining;
+    private float respawnAt;
+
+    void Start() {
+        var def = GameContext.Instance.GetDefinition<GatherableNodeDefinition>(nodeDefId);
+        remaining = def.maxHarvestCycles;
+    }
+
+    public void Harvest(Player p) {
+        var def = GameContext.Instance.GetDefinition<GatherableNodeDefinition>(nodeDefId);
+        if (remaining <= 0) {
+            if (def.renewable && Time.time >= respawnAt) {
+                remaining = def.maxHarvestCycles;
+            } else return;
         }
 
-        // 扣除
-        foreach (var input in recipe.inputs)
-            inv.RemoveItem(input.itemId, input.count);
+        remaining--;
+        // 掉落逻辑
+        foreach (var drop in def.drops)
+            if (UnityEngine.Random.value <= drop.chance)
+                p.Inventory.AddItem(drop.itemId, UnityEngine.Random.Range(drop.min, drop.max + 1));
 
-        // 产出
-        foreach (var output in recipe.outputs)
-            inv.AddItem(output.itemId, output.count);
-
-        return true;
+        if (remaining <= 0 && def.renewable)
+            respawnAt = Time.time + def.respawnSeconds;
     }
 }
 ```
 
-### 13.2 遍历所有 ItemDefinition
+### 13.5 跨表校验示例
 ```csharp
-var reg = GameContext.Instance.GetRegistry<ItemRegistry>();
-foreach (var kv in reg.Map)
-{
-    var def = kv.Value;
-    UnityEngine.Debug.Log($"{def.Id} -> {def.displayName}");
-}
-```
-
-### 13.3 运行时动态查询 Section
-```csharp
-var data = GameContext.Instance.Data;
-foreach (var (name, inst) in data.EnumerateSections())
-{
-    UnityEngine.Debug.Log($"Section={name}, Type={inst.GetType().Name}");
-}
-```
-
-### 13.4 自定义校验（在 GameContext.BuildAll() 后）
-```csharp
-public static class CrossValidator
-{
-    public static void Validate(GameRuntimeData data)
-    {
-        // 示例：验证所有 RecipeDefinition 的输入/输出 itemId 合法
-        foreach (var t in data.EnumerateDefinitionTypes())
-        {
-            // 只对 RecipeDefinition 做（示意）
-            if (t.Name != "RecipeDefinition") continue;
-        }
+public static class CrossSectionValidator {
+    public static void Validate(GameRuntimeData data) {
+        // 例：所有配方引用的 itemId 必须存在
+        // （此处伪代码，需遍历 RecipeDefinition registry）
     }
 }
 ```
@@ -389,12 +347,135 @@ public static class CrossValidator
 
 | 方向 | 说明 |
 | ---- | ---- |
-| Section 初始化优先级 | IOrderedSection + 排序 |
-| 代码生成 | 生成 static class ConfigRefs { public const int Item_Wood = 1; ... } |
-| 增量热更新 | 自定义 JSON / 二进制导入器 → 运行时替换 registry |
-| 依赖图可视化 | 构建后生成 Mermaid 图显示 Section/Definition 关系 |
-| 版本兼容 | 在 Definition 增加 version / deprecated 标记，加载时迁移 |
-| 数据差异对比 | 两份 Section 资产对比输出 diff（用于数值调优） |
+| Section 初始化优先级 | IOrderedSection |
+| 代码生成 | 生成静态 Id 常量类 / 枚举 |
+| 热更新 | 自定义 Provider + JSON / Bin Patch |
+| 差异对比 | 输出旧/新资产差异报告 |
+| 数据可视化 | 生成依赖图（Mermaid） |
+| 自动索引 | Registry 构建后建立标签→Id 集合 |
+| 数据版本迁移 | 增加 version / deprecated 字段 |
+
+---
+
+## 15. 资源与采集节点建模指南（新增重点）
+
+区分三个层次：
+
+| 层次 | 描述 | 是否 Definition | 示例字段 |
+|------|------|----------------|---------|
+| 物品（Item / Resource Item） | 背包中存在的抽象物品类型 | 是 | id, displayName, icon, maxStack, tags |
+| 采集节点模板（Gatherable Node） | 世界中“可采集对象”的行为模版 | 是 | id, displayName, renewable, respawnSeconds, maxHarvestCycles, drops[], biomeWeights[] |
+| 节点运行时实例（Node Instance） | 世界上第 N 棵树的当前状态 | 否（运行时） | nodeDefId, remainingCycles, respawnAt, position, seed |
+
+典型拆分：
+
+```csharp
+[Serializable]
+public class ItemDefinition : IDefinition {
+    [SerializeField] private int id;
+    public int Id => id;
+    public string displayName;
+    public Sprite icon;
+    public int maxStack = 99;
+    public string[] tags;
+}
+
+[Serializable]
+public class GatherableNodeDefinition : IDefinition {
+    [SerializeField] private int id;
+    public int Id => id;
+    public string displayName;
+    public bool renewable = true;
+    public int respawnSeconds = 300;
+    public int maxHarvestCycles = 3;
+    public ResourceDrop[] drops;
+    public BiomeSpawnWeight[] spawnWeights;
+}
+
+[Serializable]
+public struct ResourceDrop {
+    public int itemId;
+    public int min;
+    public int max;
+    public float chance; // 0~1
+}
+
+[Serializable]
+public struct BiomeSpawnWeight {
+    public int biomeId;
+    public float weight;
+}
+```
+
+不要把 remainingCycles 等“可变值”放进 Definition，否则多个实例会共享状态。
+
+---
+
+## 16. 运行时状态 / 存档 与 Definition 的关系
+
+| 项 | 存什么 | 如何关联 |
+|----|--------|---------|
+| 存档（SaveData） | Node 实例数组 / 背包条目 | 保存定义 Id + 运行时字段 |
+| 加载时 | 用 Id 重新 GetDefinition | 恢复模板属性 |
+| 变更 | 只改运行时对象，不写回 ScriptableObject |
+
+示例存档片段（伪 JSON）：
+```json
+{
+  "nodes":[
+    {"nodeDefId":12,"pos":[10,0,5],"remaining":1,"respawnAt":12345.6},
+    {"nodeDefId":13,"pos":[15,0,9],"remaining":0,"respawnAt":13000.2}
+  ],
+  "inventory":[
+    {"itemId":1001,"count":34},
+    {"itemId":1002,"count":5}
+  ]
+}
+```
+
+---
+
+## 17. 跨 Section 引用与校验策略
+
+| 场景 | 校验方式 |
+| ---- | -------- |
+| RecipeDefinition 引用 ItemDefinition | 遍历所有 recipes.inputs/outputs -> TryGetDefinition<ItemDefinition> |
+| GatherableNodeDefinition 掉落 itemId | 遍历 drops[] |
+| BiomeSpawnWeight 引用 biomeId | BiomeDefinition 是否存在 |
+| 技能引用 buffId | BuffDefinition 是否存在 |
+
+可实现一个统一校验入口：
+```csharp
+public interface IConfigValidator {
+    void Validate(GameRuntimeData data, List<string> issues);
+}
+```
+然后扫描实现 IConfigValidator 的脚本，集中运行。
+
+---
+
+## 18. ID 管理与防冲突策略
+
+| 方法 | 优点 | 缺点 |
+| ---- | ---- | ---- |
+| 手动 int | 灵活 | 容易冲突 |
+| 枚举 + 生成器 | 统一来源 | 需生成脚本 |
+| 外部表统一分配 | 与策划流水线对接 | 接入成本 |
+| 自动分配（编辑器按钮） | 无需记忆 | 变动可能影响旧存档 |
+
+建议：
+1. 关键系统（Item / Node / Enemy）提前规划 Id 段（1000~1999 / 2000~2999）
+2. 写一个编辑器工具：扫描所有 Section，输出重复 Id 列表
+3. 若支持代码生成：输出一个 `ConfigIds.cs`
+
+---
+
+## 19. 变更记录（Changelog）
+
+| 版本 | 内容 |
+| ---- | ---- |
+| 1.0 | 初始文档 |
+| 1.1 | 增补资源系统拆分、运行时/存档关系、跨 Section 校验、建模指南、示例扩展 |
 
 ---
 
@@ -407,23 +488,30 @@ public static class CrossValidator
 | 资产加至项目（必要时放 Resources/Config/） |  |
 | 运行验证日志无错误 |  |
 | 使用 GetDefinition<T>(id) 成功获取 |  |
-| 校验工具通过 (Tools/Config DB/Validate...) |  |
-|（可选）跨 Section 引用已验证 |  |
+| 校验工具通过 (Validate All Sections) |  |
+| 拆分物品 vs 节点定义（如涉及采集） |  |
+| 运行时状态未写回 ScriptableObject |  |
+|（可选）跨 Section 引用已校验 |  |
+|（可选）生成 Id 常量代码 |  |
+|（可选）添加自定义 Registry 查询索引 |  |
 
 ---
 
 ## 结束语
 
-该系统核心是“轻量泛型 + 明确数据流 + 可扩展”。  
-在未验证玩法前，不要过早加入复杂依赖装饰（例如事件触发、热更层、地址可寻址表）。  
-当数据规模 > 数千 或 需热更/远程配置 时，再引入：
-- 二进制压缩
-- 部分 Section 延迟加载
-- 代码生成跳过反射
+该系统核心是“模板数据静态化 + 运行时状态分离 + 可扩展加载与校验”。  
+在功能尚未稳定前，不要过早引入：
+- 热更新二进制格式
+- 动态差分补丁
+- 复杂依赖图序列
 
-如需：
-- “跨 Section 引用校验实现模板”
-- “代码生成器初版”  
-  请在对话中明示，我会提供下一步脚本。
+等规模与需求确立后再加。
 
-祝开发顺利！  
+需要：
+- Id 代码生成器
+- Cross Validator 模板
+- Addressables 版本加载示范
+
+请继续提出，我可以补充下一版文档或直接产出脚本。
+
+祝开发顺利！
