feat(data): 添加基础物品、机器和配方定义
- 新增 BaseItemDefinition、BaseMachineDefinition 和 BaseRecipeDefinition 类
- 创建相应的 Section 类和资产文件
- 实现物品、机器和配方的基本属性和功能
- 添加数据驱动的支持和扩展性设计

--- a/Assets/Scripts/Game/Data/数据驱动配置系统.md
+++ b/Assets/Scripts/Game/Data/数据驱动配置系统.md
@@ -5,6 +5,7 @@
 作者: 郑钦（更新整理含资源系统建模建议）
 
 相较 1.0 更新摘要：
+
 - 新增：资源物品 vs 采集节点（Gatherable Node）分离的建模指南
 - 新增：运行时状态与存档区分章节
 - 新增：跨 Section 引用与校验建议示例
@@ -15,6 +16,7 @@
 ---
 
 ## 目录
+
 1. 系统目标概述
 2. 核心概念
 3. 目录 & 主要文件角色
@@ -42,32 +44,32 @@
 
 该系统提供一套“**纯数据驱动 / 无硬编码字段 / 自动扫描加载 / 泛型注册表**”的游戏配置框架，解决以下痛点：
 
-| 需求 | 解决方式 |
-| ---- | -------- |
-| 避免 GameContext 硬编码 Items/Recipes 等字段 | 使用 GameRuntimeData 动态注册表 + Type/SectionName/DefinitionType 三重索引 |
-| 快速新增任意配置集合（Section） | 继承 DefinitionSectionBase<TDef> 并实现 IDefinition |
-| 统一访问方式 | GameContext.Instance.GetDefinition<TDef>(id) |
-| 编辑器集中管理与批量操作 | [CustomConfig] + ConfigDatabaseWindow |
-| 安全检验/调试 | SectionValidationUtility + 日志 |
-| 可扩展（跨 Section 校验 / 自定义 Registry / 地址化加载） | 结构已预留 |
+| 需求                                       | 解决方式                                                            |
+| ---------------------------------------- | --------------------------------------------------------------- |
+| 避免 GameContext 硬编码 Items/Recipes 等字段     | 使用 GameRuntimeData 动态注册表 + Type/SectionName/DefinitionType 三重索引 |
+| 快速新增任意配置集合（Section）                      | 继承 DefinitionSectionBase<TDef> 并实现 IDefinition                  |
+| 统一访问方式                                   | GameContext.Instance.GetDefinition<TDef>(id)                    |
+| 编辑器集中管理与批量操作                             | [CustomConfig] + ConfigDatabaseWindow                           |
+| 安全检验/调试                                  | SectionValidationUtility + 日志                                   |
+| 可扩展（跨 Section 校验 / 自定义 Registry / 地址化加载） | 结构已预留                                                           |
 
 ---
 
 ## 2. 核心概念
 
-| 名称 | 含义 |
-| ---- | ---- |
-| IDefinition | 具有唯一 int Id 的定义条目接口 |
-| DefinitionRegistry<TDef> | Id → 定义实例的字典封装，可继承扩展查询 |
-| DefinitionSectionBase<TDef> | 泛型 Section 基类：持有 List<TDef>，Build 时生成 Registry |
-| IContextSection | GameContext 扫描 & 构建的 Section 单元 |
-| GameRuntimeData | 存放所有注册对象：Type / SectionName / DefinitionType 三索引 |
-| RuntimeConfigLoader | 反射扫描 Section 类型 + 加载资产 |
-| GameContext | 框架入口：集中构建所有 Section |
-| [CustomConfig] | 编辑器标记（供 ConfigDatabaseWindow 过滤显示） |
-| Registry 扩展 | 可自定义派生类添加索引 / 条件查询 |
-| SectionName | 逻辑命名空间（非类型名）允许手动覆盖 |
-| DefinitionType | 一个 Registry 服务的定义类型（TDef） |
+| 名称                          | 含义                                               |
+| --------------------------- | ------------------------------------------------ |
+| IDefinition                 | 具有唯一 int Id 的定义条目接口                              |
+| DefinitionRegistry<TDef>    | Id → 定义实例的字典封装，可继承扩展查询                           |
+| DefinitionSectionBase<TDef> | 泛型 Section 基类：持有 List<TDef>，Build 时生成 Registry   |
+| IContextSection             | GameContext 扫描 & 构建的 Section 单元                  |
+| GameRuntimeData             | 存放所有注册对象：Type / SectionName / DefinitionType 三索引 |
+| RuntimeConfigLoader         | 反射扫描 Section 类型 + 加载资产                           |
+| GameContext                 | 框架入口：集中构建所有 Section                              |
+| [CustomConfig]              | 编辑器标记（供 ConfigDatabaseWindow 过滤显示）               |
+| Registry 扩展                 | 可自定义派生类添加索引 / 条件查询                               |
+| SectionName                 | 逻辑命名空间（非类型名）允许手动覆盖                               |
+| DefinitionType              | 一个 Registry 服务的定义类型（TDef）                        |
 
 ---
 
@@ -142,6 +144,7 @@ Scripts/
 5. 运行游戏，验证加载日志
 
 示例（精简）：
+
 ```csharp
 [System.Serializable]
 public class EnemyDefinition : IDefinition {
@@ -196,51 +199,51 @@ foreach (var (name, inst) in GameContext.Instance.Data.EnumerateSections()) {
 
 ## 8. 运行时 / 构建注意事项
 
-| 项 | 说明 |
-|----|-----|
-| Editor 加载 | AssetDatabase.FindAssets 精确加载 |
-| Player 加载 | Resources.LoadAll("Config", sectionType)（需放 Resources/Config） |
-| 顺序不保证 | 多资产同类型之间无顺序保证 |
-| 反射扫描缓存 | forceRescanOnPlay=false 时只第一次扫描 |
-| IL2CPP 剪裁 | 继承关系 + 资产引用已防裁剪，复杂动态场景可加 link.xml |
-| 多个相同 Section | 若造成 Id 冲突，仅打印错误，不中断构建（可自定义改为抛异常） |
+| 项            | 说明                                                            |
+| ------------ | ------------------------------------------------------------- |
+| Editor 加载    | AssetDatabase.FindAssets 精确加载                                 |
+| Player 加载    | Resources.LoadAll("Config", sectionType)（需放 Resources/Config） |
+| 顺序不保证        | 多资产同类型之间无顺序保证                                                 |
+| 反射扫描缓存       | forceRescanOnPlay=false 时只第一次扫描                               |
+| IL2CPP 剪裁    | 继承关系 + 资产引用已防裁剪，复杂动态场景可加 link.xml                             |
+| 多个相同 Section | 若造成 Id 冲突，仅打印错误，不中断构建（可自定义改为抛异常）                              |
 
 ---
 
 ## 9. 校验与调试
 
-| 工具 | 作用 |
-| ---- | ---- |
+| 工具                       | 作用                  |
+| ------------------------ | ------------------- |
 | Validate All Sections 菜单 | 尝试构建每个 Section，捕获异常 |
-| verbose 日志 | 输出类型数量 / 资产数量 / 耗时 |
-| Data.LogSummary() | 输出当前注册计数 |
-| 自定义 Cross Validator | 进行跨表引用一致性校验 |
+| verbose 日志               | 输出类型数量 / 资产数量 / 耗时  |
+| Data.LogSummary()        | 输出当前注册计数            |
+| 自定义 Cross Validator      | 进行跨表引用一致性校验         |
 
 ---
 
 ## 10. 常见错误与诊断
 
-| 现象 | 原因 | 处理 |
-| ---- | ---- | ---- |
-| GetDefinition 抛异常 | Id 不存在 | 确认资产 & Id，必要时改用 TryGetDefinition |
-| Section 未加载 | 未实现 IContextSection 或未放指定目录 | 确认继承/目录 |
-| 重复 Id 日志 | 两个资产包含相同 Id | 在编辑器中整理；考虑写 Id 分配工具 |
-| 运行时访问 Null | 初始化顺序错误 | 确认在 GameContext.Init 后执行 |
-| 想修改 Definition 值 | 不应在运行时直接改模板 | 拷贝到运行时状态对象 |
-| 想做热更 | 需替换加载层（Addressables / 外部 JSON） | 封装 Provider |
+| 现象                | 原因                             | 处理                               |
+| ----------------- | ------------------------------ | -------------------------------- |
+| GetDefinition 抛异常 | Id 不存在                         | 确认资产 & Id，必要时改用 TryGetDefinition |
+| Section 未加载       | 未实现 IContextSection 或未放指定目录    | 确认继承/目录                          |
+| 重复 Id 日志          | 两个资产包含相同 Id                    | 在编辑器中整理；考虑写 Id 分配工具              |
+| 运行时访问 Null        | 初始化顺序错误                        | 确认在 GameContext.Init 后执行         |
+| 想修改 Definition 值  | 不应在运行时直接改模板                    | 拷贝到运行时状态对象                       |
+| 想做热更              | 需替换加载层（Addressables / 外部 JSON） | 封装 Provider                      |
 
 ---
 
 ## 11. 性能与扩展建议
 
-| 场景 | 建议 |
-| ---- | ---- |
-| 定义数量 < 1k | 现实现足够 |
-| 1k~10k | 避免重复字符串解析，必要时改用 struct + Blob |
-| >10k | 外部二进制表 + 轻量缓存层 |
-| 频繁按条件查询 | 在自定义 Registry 里建索引（如 Tag → List<int>） |
-| 动态卸载 | 增加 Unregister/Clear API（当前未实现） |
-| 分区域加载 | Addressables 标签化 Section；按需加载后手动 Build |
+| 场景        | 建议                                     |
+| --------- | -------------------------------------- |
+| 定义数量 < 1k | 现实现足够                                  |
+| 1k~10k    | 避免重复字符串解析，必要时改用 struct + Blob          |
+| >10k      | 外部二进制表 + 轻量缓存层                         |
+| 频繁按条件查询   | 在自定义 Registry 里建索引（如 Tag → List<int>）  |
+| 动态卸载      | 增加 Unregister/Clear API（当前未实现）         |
+| 分区域加载     | Addressables 标签化 Section；按需加载后手动 Build |
 
 ---
 
@@ -266,6 +269,7 @@ A: 写一个 JsonSection<TDef>：运行时读取外部文件 → 构建 registry
 ## 13. 典型使用示例代码
 
 ### 13.1 配方消耗
+
 ```csharp
 public bool TryCraft(int recipeId, PlayerInventory inv)
 {
@@ -287,6 +291,7 @@ public bool TryCraft(int recipeId, PlayerInventory inv)
 ```
 
 ### 13.2 遍历所有物品
+
 ```csharp
 var reg = GameContext.Instance.GetRegistry<ItemRegistry>();
 foreach (var kv in reg.Map)
@@ -294,12 +299,14 @@ foreach (var kv in reg.Map)
 ```
 
 ### 13.3 枚举全部 Section
+
 ```csharp
 foreach (var (name, inst) in GameContext.Instance.Data.EnumerateSections())
     Debug.Log($"Section={name},Type={inst.GetType().Name}");
 ```
 
 ### 13.4 采集节点运行时
+
 ```csharp
 public class GatherableNodeRuntime : MonoBehaviour {
     public int nodeDefId;
@@ -332,6 +339,7 @@ public class GatherableNodeRuntime : MonoBehaviour {
 ```
 
 ### 13.5 跨表校验示例
+
 ```csharp
 public static class CrossSectionValidator {
     public static void Validate(GameRuntimeData data) {
@@ -345,15 +353,15 @@ public static class CrossSectionValidator {
 
 ## 14. 未来可扩展方向
 
-| 方向 | 说明 |
-| ---- | ---- |
-| Section 初始化优先级 | IOrderedSection |
-| 代码生成 | 生成静态 Id 常量类 / 枚举 |
-| 热更新 | 自定义 Provider + JSON / Bin Patch |
-| 差异对比 | 输出旧/新资产差异报告 |
-| 数据可视化 | 生成依赖图（Mermaid） |
-| 自动索引 | Registry 构建后建立标签→Id 集合 |
-| 数据版本迁移 | 增加 version / deprecated 字段 |
+| 方向             | 说明                              |
+| -------------- | ------------------------------- |
+| Section 初始化优先级 | IOrderedSection                 |
+| 代码生成           | 生成静态 Id 常量类 / 枚举                |
+| 热更新            | 自定义 Provider + JSON / Bin Patch |
+| 差异对比           | 输出旧/新资产差异报告                     |
+| 数据可视化          | 生成依赖图（Mermaid）                  |
+| 自动索引           | Registry 构建后建立标签→Id 集合          |
+| 数据版本迁移         | 增加 version / deprecated 字段      |
 
 ---
 
@@ -361,11 +369,11 @@ public static class CrossSectionValidator {
 
 区分三个层次：
 
-| 层次 | 描述 | 是否 Definition | 示例字段 |
-|------|------|----------------|---------|
-| 物品（Item / Resource Item） | 背包中存在的抽象物品类型 | 是 | id, displayName, icon, maxStack, tags |
-| 采集节点模板（Gatherable Node） | 世界中“可采集对象”的行为模版 | 是 | id, displayName, renewable, respawnSeconds, maxHarvestCycles, drops[], biomeWeights[] |
-| 节点运行时实例（Node Instance） | 世界上第 N 棵树的当前状态 | 否（运行时） | nodeDefId, remainingCycles, respawnAt, position, seed |
+| 层次                       | 描述              | 是否 Definition | 示例字段                                                                                  |
+| ------------------------ | --------------- | ------------- | ------------------------------------------------------------------------------------- |
+| 物品（Item / Resource Item） | 背包中存在的抽象物品类型    | 是             | id, displayName, icon, maxStack, tags                                                 |
+| 采集节点模板（Gatherable Node）  | 世界中“可采集对象”的行为模版 | 是             | id, displayName, renewable, respawnSeconds, maxHarvestCycles, drops[], biomeWeights[] |
+| 节点运行时实例（Node Instance）   | 世界上第 N 棵树的当前状态  | 否（运行时）        | nodeDefId, remainingCycles, respawnAt, position, seed                                 |
 
 典型拆分：
 
@@ -413,13 +421,14 @@ public struct BiomeSpawnWeight {
 
 ## 16. 运行时状态 / 存档 与 Definition 的关系
 
-| 项 | 存什么 | 如何关联 |
-|----|--------|---------|
-| 存档（SaveData） | Node 实例数组 / 背包条目 | 保存定义 Id + 运行时字段 |
-| 加载时 | 用 Id 重新 GetDefinition | 恢复模板属性 |
-| 变更 | 只改运行时对象，不写回 ScriptableObject |
+| 项            | 存什么                          | 如何关联            |
+| ------------ | ---------------------------- | --------------- |
+| 存档（SaveData） | Node 实例数组 / 背包条目             | 保存定义 Id + 运行时字段 |
+| 加载时          | 用 Id 重新 GetDefinition        | 恢复模板属性          |
+| 变更           | 只改运行时对象，不写回 ScriptableObject |                 |
 
 示例存档片段（伪 JSON）：
+
 ```json
 {
   "nodes":[
@@ -437,33 +446,36 @@ public struct BiomeSpawnWeight {
 
 ## 17. 跨 Section 引用与校验策略
 
-| 场景 | 校验方式 |
-| ---- | -------- |
+| 场景                                 | 校验方式                                                            |
+| ---------------------------------- | --------------------------------------------------------------- |
 | RecipeDefinition 引用 ItemDefinition | 遍历所有 recipes.inputs/outputs -> TryGetDefinition<ItemDefinition> |
-| GatherableNodeDefinition 掉落 itemId | 遍历 drops[] |
-| BiomeSpawnWeight 引用 biomeId | BiomeDefinition 是否存在 |
-| 技能引用 buffId | BuffDefinition 是否存在 |
+| GatherableNodeDefinition 掉落 itemId | 遍历 drops[]                                                      |
+| BiomeSpawnWeight 引用 biomeId        | BiomeDefinition 是否存在                                            |
+| 技能引用 buffId                        | BuffDefinition 是否存在                                             |
 
 可实现一个统一校验入口：
+
 ```csharp
 public interface IConfigValidator {
     void Validate(GameRuntimeData data, List<string> issues);
 }
 ```
+
 然后扫描实现 IConfigValidator 的脚本，集中运行。
 
 ---
 
 ## 18. ID 管理与防冲突策略
 
-| 方法 | 优点 | 缺点 |
-| ---- | ---- | ---- |
-| 手动 int | 灵活 | 容易冲突 |
-| 枚举 + 生成器 | 统一来源 | 需生成脚本 |
-| 外部表统一分配 | 与策划流水线对接 | 接入成本 |
-| 自动分配（编辑器按钮） | 无需记忆 | 变动可能影响旧存档 |
+| 方法          | 优点       | 缺点        |
+| ----------- | -------- | --------- |
+| 手动 int      | 灵活       | 容易冲突      |
+| 枚举 + 生成器    | 统一来源     | 需生成脚本     |
+| 外部表统一分配     | 与策划流水线对接 | 接入成本      |
+| 自动分配（编辑器按钮） | 无需记忆     | 变动可能影响旧存档 |
 
 建议：
+
 1. 关键系统（Item / Node / Enemy）提前规划 Id 段（1000~1999 / 2000~2999）
 2. 写一个编辑器工具：扫描所有 Section，输出重复 Id 列表
 3. 若支持代码生成：输出一个 `ConfigIds.cs`
@@ -472,28 +484,28 @@ public interface IConfigValidator {
 
 ## 19. 变更记录（Changelog）
 
-| 版本 | 内容 |
-| ---- | ---- |
-| 1.0 | 初始文档 |
+| 版本  | 内容                                       |
+| --- | ---------------------------------------- |
+| 1.0 | 初始文档                                     |
 | 1.1 | 增补资源系统拆分、运行时/存档关系、跨 Section 校验、建模指南、示例扩展 |
 
 ---
 
 ## 附录：快速 Checklist
 
-| 需求 | 是否完成 |
-| ---- | -------- |
-| 新建 SectionType (继承 DefinitionSectionBase) |  |
-| 添加 definitions 并填写唯一 Id |  |
-| 资产加至项目（必要时放 Resources/Config/） |  |
-| 运行验证日志无错误 |  |
-| 使用 GetDefinition<T>(id) 成功获取 |  |
-| 校验工具通过 (Validate All Sections) |  |
-| 拆分物品 vs 节点定义（如涉及采集） |  |
-| 运行时状态未写回 ScriptableObject |  |
-|（可选）跨 Section 引用已校验 |  |
-|（可选）生成 Id 常量代码 |  |
-|（可选）添加自定义 Registry 查询索引 |  |
+| 需求                                        | 是否完成 |
+| ----------------------------------------- | ---- |
+| 新建 SectionType (继承 DefinitionSectionBase) |      |
+| 添加 definitions 并填写唯一 Id                   |      |
+| 资产加至项目（必要时放 Resources/Config/）            |      |
+| 运行验证日志无错误                                 |      |
+| 使用 GetDefinition<T>(id) 成功获取              |      |
+| 校验工具通过 (Validate All Sections)            |      |
+| 拆分物品 vs 节点定义（如涉及采集）                       |      |
+| 运行时状态未写回 ScriptableObject                 |      |
+| （可选）跨 Section 引用已校验                       |      |
+| （可选）生成 Id 常量代码                            |      |
+| （可选）添加自定义 Registry 查询索引                   |      |
 
 ---
 
@@ -501,6 +513,7 @@ public interface IConfigValidator {
 
 该系统核心是“模板数据静态化 + 运行时状态分离 + 可扩展加载与校验”。  
 在功能尚未稳定前，不要过早引入：
+
 - 热更新二进制格式
 - 动态差分补丁
 - 复杂依赖图序列
@@ -508,6 +521,7 @@ public interface IConfigValidator {
 等规模与需求确立后再加。
 
 需要：
+
 - Id 代码生成器
 - Cross Validator 模板
 - Addressables 版本加载示范
